--- a/preschool.html
+++ b/preschool.html
@@ -198,11 +198,11 @@
 </header>
 
 <nav>
-    <a href="karina.html">Home</a> |
-    <a href="bio_rina_i.html">Biodata</a> |
-    <a href="int_karina_ii.html">Interest</a> |
+    <a href="index.html">Home</a> |
+    <a href="bio.html">Biodata</a> |
+    <a href="int.html">Interest</a> |
     <div class="dropdown">
-        <a href="edu_rina.html" class="active dropbtn">Education</a>
+        <a href="edu.html" class="active dropbtn">Education</a>
         <div class="dropdown-content">
             <a href="preschool.html" target="_blank" class="active dropbtn">Preschool</a>
             <a href="primary.html" target="_blank">Primary School</a>
@@ -210,9 +210,9 @@
             <a href="university.html" target="_blank">University</a>
         </div>
     </div> |
-    <a href="fam_rina.html">Family</a> |
+    <a href="fam.html">Family</a> |
     <div class="dropdown">
-        <a href="gallery_rina.html" class="dropbtn">Gallery</a>
+        <a href="gallery.html" class="dropbtn">Gallery</a>
         <div class="dropdown-content">
             <a href="photo.html" target="_blank">Photo</a>
             <a href="video.html" target="_blank">Video</a>
