--- a/preschool.html
+++ b/preschool.html
@@ -238,9 +238,9 @@
     <p>&copy; 2024 Anisa's Website. All rights reserved.</p>
     <div class="footer-links">
         <a href="preschool.html">TOP</a>
-        <a href="karina.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="primary.html">Next page</a>
-        <a href="fam_rina.html">Next</a>
+        <a href="fam.html">Next</a>
     </div>
 </footer>
 
