--- a/preschool.html
+++ b/preschool.html
@@ -200,7 +200,7 @@
 <nav>
     <a href="index.html">Home</a> |
     <a href="bio.html">Biodata</a> |
-    <a href="int.html">Interest</a> |
+    <a href="interest.html">Interest</a> |
     <div class="dropdown">
         <a href="edu.html" class="active dropbtn">Education</a>
         <div class="dropdown-content">
